# relay-sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
src/relay_ai/: __init__.py  _batch.py  _cli.py  _client.py  _errors.py  _otel.py  _streaming.py  _telemetry.py  _types.py
