[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relay-ai"
version = "1.0.0"
description = "Official Python SDK for the Relay AI Gateway. One key, every model."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "ai5labs", email = "engineering@ai5labs.com" }]
keywords = ["llm", "ai", "relay", "ai-gateway", "multi-model", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["httpx>=0.25.0"]

[project.urls]
Homepage = "https://relay.ai5labs.com"
Documentation = "https://relay.ai5labs.com/models"
Repository = "https://github.com/ai5labs/relay-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/relay_ai"]
