[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relay-ai-sdk"
version = "2.0.1"
description = "Official Python SDK for the Relay AI Gateway. One key, every model."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ai5labs", email = "relay@ai5labs.com" }]
keywords = [
    "llm", "ai", "relay", "ai-gateway", "multi-model", "sdk",
    "streaming", "tool-calling", "opentelemetry",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
otel = [
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[project.scripts]
relay = "relay_ai._cli:main"

[project.urls]
Homepage = "https://relay.ai5labs.com"
Documentation = "https://relay.ai5labs.com/docs/sdk"
Repository = "https://github.com/ai5labs/relay-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/relay_ai"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
]
